--- a/djblogger/templates/base.html
+++ b/djblogger/templates/base.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!doctype html>
 <html lang="en">
 
@@ -7,6 +9,8 @@
     <title>{% block title %}Homepage{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <!-- static -->
+    <link rel="stylesheet" href="{% static 'css/main.css' %}">
 </head>
 
 <body>
