+ logo, test fonts

--- a/djblogger/templates/blog/index.html
+++ b/djblogger/templates/blog/index.html
@@ -1,6 +1,6 @@
-{% extends "../base.html" %}
+{% extends "../base/base.html" %}
 {% block title %}Index page{% endblock %}
 
 {% block template %}
-Code here
+{% include "../base/navbar.html" %}
 {% endblock %}
