be editing div, text

--- a/djblogger/static/css/main.css
+++ b/djblogger/static/css/main.css
@@ -11,3 +11,8 @@
     font-family: 'Barlow', sans-serif;
     font-family: 'Merriweather', serif;
 }
+
+html,
+body {
+    font-family: 'Barlow', sans-serif;
+}
