--- a/djblogger/templates/blog/components/splash.html
+++ b/djblogger/templates/blog/components/splash.html
@@ -1,3 +1,8 @@
-<div class="container border-1 border-dark">
-    start to splash
+<div class="container border-bottom border-2 border-dark">
+    <div class="container">
+        <h1 class="display-1">Tech Talk.</h1>
+        <p class="fs-4 lh-1 text-muted fw-bolder">
+            No nonsense tutorials, tips, and expertise from writers on tech topics.
+        </p>
+    </div>
 </div>
