--- a/djblogger/templates/base/base.html
+++ b/djblogger/templates/base/base.html
@@ -11,6 +11,8 @@
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <!-- static -->
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
+    <!-- favicon error test -->
+    <link rel="short icon" href="#">
 </head>
 
 <body>
