--- a/djblogger/templates/blog/components/post-list-elements.html
+++ b/djblogger/templates/blog/components/post-list-elements.html
@@ -1,8 +1,8 @@
 {% for post in posts %}
 <a href="" class="text-decoration-none"></a>
 {% if forloop.last %}
-<div class="card border-0 pb-3 pb-sm-5" hx-get="{% url 'blog:homepage' %}?page{{ page_object.number|add:1 }}"
-    hx-trigger="revealed" hx-swap="afterend">
+<div class="card border-0 pb-3 pb-sm-5" hx-trigger="revealed"
+    hx-get="{% url 'blog:homepage' %}?page={{ page_obj.number|add:1 }}" hx-swap="afterend">
     {% else %}
     <div class="card border-0 pb-3 pb-sm-5">
         {% endif %}
