--- a/djblogger/templates/base/base.html
+++ b/djblogger/templates/base/base.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
     <!-- favicon error test -->
     <link rel="short icon" href="#">
+    <!-- django-htmx -->
+    <script src="{% static 'js/htmx.min.js' %}" defer></script>
 </head>
 
 <body>
