+ Feat: tag cloud

--- a/djblogger/templates/blog/index.html
+++ b/djblogger/templates/blog/index.html
@@ -12,7 +12,12 @@
             {% include "./components/post-list-elements.html" %}
 
         </div>
-        <div class="d-none d-lg-block col-4">b</div>
+        <div class="d-none d-lg-block col-4">
+
+            <!-- {% include "./components/tag-cloud.html" %} -->
+            {% sidebar_tag_cloud %}
+
+        </div>
     </div>
 </div>
 
