--- a/djblogger/static/css/main.css
+++ b/djblogger/static/css/main.css
@@ -7,11 +7,6 @@
     letter-spacing: -1.5px;
 }
 
-.test {
-    font-family: 'Barlow', sans-serif;
-    font-family: 'Merriweather', serif;
-}
-
 html,
 body {
     font-family: 'Barlow', sans-serif;
@@ -20,6 +15,14 @@ body {
 
 .fw-500 {
     font-weight: 500 !important;
+}
+
+.fs-14 {
+    font-size: 0.875rem;
+}
+
+.fs-15 {
+    font-size: 0.9375rem;
 }
 
 .infscroll-title {
