+ Feat: footer.html

--- a/djblogger/templates/blog/index.html
+++ b/djblogger/templates/blog/index.html
@@ -16,6 +16,7 @@
 
             <!-- {% include "./components/tag-cloud.html" %} -->
             {% sidebar_tag_cloud %}
+            {% include "base/footer.html" %}
 
         </div>
     </div>
