--- a/djblogger/templates/blog/single.html
+++ b/djblogger/templates/blog/single.html
@@ -1,3 +1,5 @@
+{% extends "../base/3-col-template.html" %}
+
 <div>{{post.author}}</div>
 <div>{{post.updated_at|date:"M d"}}</div>
 <h1>{{post.title}}</h1>
