--- a/djblogger/templates/blog/single.html
+++ b/djblogger/templates/blog/single.html
@@ -1,7 +1,9 @@
 {% extends "../base/3-col-template.html" %}
 
+{% block content-mid %}
 <div>{{post.author}}</div>
 <div>{{post.updated_at|date:"M d"}}</div>
 <h1>{{post.title}}</h1>
 <h2>{{post.subtitle}}</h2>
 {{post.content}}
+{% endblock %}
