--- a/djblogger/templates/blog/single.html
+++ b/djblogger/templates/blog/single.html
@@ -10,6 +10,18 @@
     .blogger h1 {
         letter-spacing: -0.6px;
     }
+
+    .post h1 {
+        font-size: 24px;
+        font-weight: bold;
+    }
+
+    .post p {
+        font-family: Merriweather;
+        font-size: 1.0625rem;
+        line-height: 32px;
+        letter-spacing: 0.2px;
+    }
 </style>
 
 
@@ -18,7 +30,9 @@
     <div class="text-muted">{{post.updated_at|date:"M d"}}</div>
     <h1 class="fw-bold pb-2">{{post.title}}</h1>
     <h2 class="text-muted fs-4 pb-4">{{post.subtitle}}</h2>
-    {{post.content}}
+    <div class="post">
+        {{post.content | markdown | safe}}
+    </div>
 </div>
 
 
