--- a/djblogger/templates/base/secondary-navbar.html
+++ b/djblogger/templates/base/secondary-navbar.html
@@ -15,10 +15,18 @@
         top: 18%;
         left: 50%;
     }
+
+    @media only screen and (max-width: 768px) {
+
+        .container,
+        .container-sm {
+            max-width: 100%;
+        }
+    }
 </style>
 
-<nav class="navbar navbar-expand-lg align-items-start py-1 pt-lg-4 sticky-top">
-    <div class="container py-2 px-4 px-lg-0 sticky-top">
+<nav class="navbar navbar-expand-lg align-items-start pt-lg-4 sticky-top">
+    <div class="container py-2 sticky-top">
         <a class="navbar-brand m-0" href="/">
             <div id="sm-logo-out">
                 <div id="sm-logo-in"></div>
